--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -331,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -349,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -366,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -383,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -400,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -426,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
@@ -444,19 +444,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
-     "ename": "KeyError",
-     "evalue": "'div'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn [29], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[39mprint\u001b[39m(soup\u001b[39m.\u001b[39;49mfind(\u001b[39m'\u001b[39;49m\u001b[39mp\u001b[39;49m\u001b[39m'\u001b[39;49m)[\u001b[39m\"\u001b[39;49m\u001b[39mdiv\u001b[39;49m\u001b[39m\"\u001b[39;49m])\n",
-      "File \u001b[0;32m/Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages/bs4/element.py:1519\u001b[0m, in \u001b[0;36mTag.__getitem__\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   1516\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39m__getitem__\u001b[39m(\u001b[39mself\u001b[39m, key):\n\u001b[1;32m   1517\u001b[0m     \u001b[39m\"\"\"tag[key] returns the value of the 'key' attribute for the Tag,\u001b[39;00m\n\u001b[1;32m   1518\u001b[0m \u001b[39m    and throws an exception if it's not there.\"\"\"\u001b[39;00m\n\u001b[0;32m-> 1519\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mattrs[key]\n",
-      "\u001b[0;31mKeyError\u001b[0m: 'div'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<p><tt style=\"font-size: 20;\">Hi everyone i am glad to tell you that i am MCA student,\n",
+      "                        I have completed BCA in 2021.I am looking for a development role because of interested in coding. I have learnt C, C++, HTML, CSS,CORE JAVA, ADVANCE JAVA,JAVA SCRIPT\n",
+      "                        PYTHON, MYSQL DATABASE AND BASIC COMMANDS OF UNIX &amp; LINUX and persuing\n",
+      "                        to learn MACHINE LEARNING AND DEEP LEARNING. <br/><br/></tt></p>\n"
      ]
     }
    ],
@@ -466,10 +464,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 85,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "https://tanyafinance.com#home\n",
+      "https://tanyafinance.com#about\n",
+      "https://tanyafinance.com#services\n",
+      "https://tanyafinance.com#skills\n",
+      "https://tanyafinance.com#teams\n",
+      "https://tanyafinance.comcourses.html\n",
+      "https://tanyafinance.comother.html\n",
+      "https://tanyafinance.comhttps://formsubmit.co/el/luxewi\n",
+      "https://tanyafinance.comvideos/hireme.mp4\n",
+      "https://tanyafinance.comcv/harendraPrajapatiCv.pdf\n",
+      "https://tanyafinance.comhttps://www.youtube.com/channel/UC5H_q2PTvvdid3TpGxcw1ZQ\n",
+      "https://tanyafinance.comhttps://in.linkedin.com/in/harendra-prajapati-0a1710185?trk=people-guest_people_search-card\n",
+      "https://tanyafinance.comhttps://github.com/harendraprajapati72\n",
+      "https://tanyafinance.comhttps://github.com/harendraprajapati72\n"
+     ]
+    }
+   ],
+   "source": [
+    "anchors =soup.find_all('a')\n",
+    "all_links=set()\n",
+    "for link in anchors:\n",
+    "    if(link.get('href')!='#'):\n",
+    "        linkText=\"https://tanyafinance.com\"+link.get('href')\n",
+    "        all_links.add(link)\n",
+    "        print(linkText)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'NoneType' object is not callable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn [39], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[39mprint\u001b[39m(soup\u001b[39m.\u001b[39;49mget_lnks())\n",
+      "\u001b[0;31mTypeError\u001b[0m: 'NoneType' object is not callable"
+     ]
+    }
+   ],
+   "source": [
+    "# print(soup.get_lnks()) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'NoneType' object has no attribute 'parent'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn [90], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39m# navbarSupportedContent=soup.find(id='navsupportedcontent')\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m \u001b[39mprint\u001b[39m(navbarSupportedContent\u001b[39m.\u001b[39;49mparent)\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'NoneType' object has no attribute 'parent'"
+     ]
+    }
+   ],
+   "source": [
+    "navbarSupportedContent=soup.find(id='navsupportedcontent')\n",
+    "print(navbarSupportedContent.parent)"
+   ]
   }
  ],
  "metadata": {
